# kayte-lang

./: .gitignore  Form1.kfrm  Jenkinsfile  Makefile  Makefile.delphi  Makefile.fpc  Makefile.lazarus  Makefile.n64  README.md  build_kayte_macos.sh  build_kayte_windows.ps1  build_kings.sh  custom.sh  dummy.c  fpdoc_project.xml  kayte  kayte_program.kayte  kayte_program_arm64.ll  kayte_program_x86_64.ll  kayte_runtime.c  kaytetosnes.pas  kings.lpr  kings.lps  kings_new.lps  test_kayte.kayte
.circleci/: config.yml
.github/: funding.yml
Forms/: login.kfrm
KayteControls/: KayteInterpreter.lpi  KayteInterpreter.lpr  KayteInterpreter.lps  link63278.res  linkfiles63278.res  ppaslink.sh  symbol_order.fpc
KayteIDE/: KayteIDE.lpi  KayteIDE.lpr  KayteIDE.lps  Main.lfm  Main.pas  kayteide.rproj  kayteideunit.pas
KayteLang/: index-8.html  index.html
Parser/: UKfrmParser.pas
Renderer/: UKfrmRenderer.pas
Router/: ueventrouter.pas
Runtime/: FKFRMRUNTIME.pas  UKfrmRuntime.pas  kfrmruntime.pas
VM/: UControlEventHandler.pas  UEventRouter.pas
ast/: UKfrmtypes.pas
backup/: kings.lps  kings_new.lps
bnf/: vb_tree.bnf
components/: forms.pas
demo/: c99.pas  client.pas  kayte.lpi  kayte2pce.pas  kings  kings.lpi  kings.lpr  kings.lps  kings_group.lpg  kings_new.lpi  kings_new.lps  sdk.pas  sys_ios.pas  sys_mac.pas
dsource/: basic.$$$  bytecode.pas  c99.pas  cli.pas  sys_mac.pas  tcli.pas  teste.dpr
examples/: calculator.kayte  form1.kfrm  hello.kayte  ui.kayte
group/: kayte.lpg
jvm/: KayteVM.java  jvm.pas  pom.xml
kayte/: fibonnaci.kayte  hello.kayte  loop.kayte  math.kayte  module.kayte
kayte-lang-js/: package.json
mathLib/: julday.pas  kayteLib.lps  libkaytelib.dylib  mathLib.lpi  mathLib.lpr  mathLib.lps
projects/: build_kayte  build_kayte.lpi  build_kayte.lpr  build_kayte.lps  example.kayte  fact.kayte  index.html  interpreterutils.pas  kayte  kayte.lpi  kayte.lpr  kayte.lps  kayte_compiler.pas  kayte_compiler.ppu  link12143.res  link77750.res  link98505.res  link98809.res  link98852.res  linkfiles12143.res  linkfiles22843.res  linkfiles22862.res  linkfiles50981.res  linkfiles52157.res  linkfiles98505.res  ppaslink.sh  program.bas  symbol_order.fpc  symbol_order22843.fpc  symbol_order22862.fpc  vb6interpreter  vb6interpreter.lpi  vb6interpreter.lpr  vb6interpreter.lps
source/: Makefile  Makefile.fpc  README.md  assembler.pas  assembler.ppu  ast.pas  ast.ppu  basic.pas  buildkayte  bytecode_embed.pas  bytecodetypes.pas  bytecodevm.pas  c99.pas  (+56 more)
tools/kcc/: CMakeLists.txt  README.md
tools/kcc/examples/: hello.c
tools/kcc/include/: AST.h  codegen.h  error.h  kcc.h  lexer.h  parser.h  preprocessor.h  symbol_table.h  types.h
tools/kcc/src/: AST.c  codegen.c  error.c  lexer.c  main.c  parser.c  preprocessor.c  symbol_table.c
tools/kcc/tests/: test_lexer.c  test_parser.c
tools/kldb/: CMakeLists.txt  kldb.c
(+215 files in other folders)
